<resources>
    <string name="app_name">pocloy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Dies ist keine gültige Email</string>
    <string name="error_invalid_password">Das Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Das Passwort stimmt nicht</string>
    <string name="error_field_required">Dieses Feld ist obligatorisch</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to the navigation -->
    <string name="nav_my_collection">My collection</string>
    <string name="nav_unwrap_stickers">Unwrap stickers</string>
    <string name="nav_trade">Trade stickers</string>
    <string name="nav_redeem">Redeem stickers</string>
    <string name="nav_qrcode">My vouchers</string>

    <!-- Strings related to redeeming vouchers -->
    <string name="redeem_vouchers_filter">Search for vouchers</string>

    <!-- Strings related to using vouchers -->
    <string name="exchange_voucher">Scan this voucher</string>
    <string name="exchange_voucher_ok">OK</string>

    <!-- Strings related to trading -->
    <string name="trade_offer_title">Will give</string>
    <string name="trade_required_title">for</string>
    <string name="trade_stickers_accept_title">Accept this trade offer?</string>

</resources>
