<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_stickers"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/cards_outline"
            android:title="@string/nav_my_collection" />
        <item
            android:id="@+id/nav_unwrap_stickers"
            android:icon="@drawable/gift"
            android:title="@string/nav_unwrap_stickers" />
        <item
            android:id="@+id/nav_trade"
            android:icon="@drawable/swap_horizontal"
            android:title="@string/nav_trade" />
    </group>
    <group
        android:id="@+id/nav_group_vouchers"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_redeem"
            android:icon="@drawable/wallet_giftcard"
            android:title="@string/nav_redeem" />
        <item
            android:id="@+id/nav_show_vouchers"
            android:icon="@drawable/ticket_percent"
            android:title="@string/nav_qrcode" />
    </group>
</menu>