<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/trade_stickers_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/redeem_vouchers_filter"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:paddingStart="10dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/trade_offer_title"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:paddingEnd="10dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/trade_required_title"
                    android:textSize="20sp" />
            </LinearLayout>
        </TableRow>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">

            <TableLayout
                android:id="@+id/trade_stickers_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*" />
        </ScrollView>
    </TableLayout>

</LinearLayout>